objects/EXPRN__Credit_Report__c.object
<CustomObject>
    <description>It is giving Credit report of particular account .</description>
    <fields>
        <fullName>EXPRN__Active_Business_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Business Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_0130__c</fullName>
        <label>Additional 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_3160__c</fullName>
        <label>Additional 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_6190__c</fullName>
        <label>Additional 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_Balance__c</fullName>
        <label>Additional Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_Current__c</fullName>
        <label>Additional Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_DBT__c</fullName>
        <label>Additional DBT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_Lines_Reported__c</fullName>
        <label>Additional Lines Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Additional_Recent_High_Credit__c</fullName>
        <label>Additional Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__All_Collections_Count__c</fullName>
        <label>All Collections Count</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__All_Trades_Count__c</fullName>
        <label>All Trades Count</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__All_collections_147__c</fullName>
        <label>All collections (147)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__All_trades_513__c</fullName>
        <label>All trades (513)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Owner</label>
        <referenceTo>EXPRN__Owner_Grant__c</referenceTo>
        <relationshipName>Credit_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Business_Victim_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Victim Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_0130__c</fullName>
        <label>Combined Trade 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_3160__c</fullName>
        <label>Combined Trade 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_6190__c</fullName>
        <label>Combined Trade 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_Balance__c</fullName>
        <label>Combined Trade Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_Current__c</fullName>
        <label>Combined Trade Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_DBT__c</fullName>
        <label>Combined Trade DBT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_Lines_Reported__c</fullName>
        <label>Combined Trade Lines Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Combined_Trade_Recent_High_Credit__c</fullName>
        <label>Combined Trade Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Company_DBT__c</fullName>
        <label>Company DBT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBT unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__Contacts__c</fullName>
        <label>Contacts</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_0130__c</fullName>
        <label>Continuous 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_3160__c</fullName>
        <label>Continuous 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_6190__c</fullName>
        <label>Continuous 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Balance__c</fullName>
        <label>Continuous Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Current__c</fullName>
        <label>Continuous Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_DBT__c</fullName>
        <label>Continuous DBT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Lines_Reported__c</fullName>
        <label>Continuous Lines Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Recent_High_Credit__c</fullName>
        <label>Continuous Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_Trade_Code__c</fullName>
        <label>Continuous Trade Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Continuous_trade_309__c</fullName>
        <label>Continuous trade (309)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Limit_Recommendation__c</fullName>
        <label>Credit Limit Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy_DSP__c</fullName>
        <formula>EXPRN__Credit_Policy__r.Name &amp; &quot; - &quot; &amp; EXPRN__Credit_Policy__r.EXPRN__Credit_Policy_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Policy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Credit_Policy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Policy</label>
        <referenceTo>EXPRN__Credit_Policy__c</referenceTo>
        <relationshipLabel>Experian Credit Reports</relationshipLabel>
        <relationshipName>Experian_Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Current_DBT__c</fullName>
        <label>Current DBT</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Exp_Business_Name__c</fullName>
        <label>Experian Business Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Experian_Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Experian Business</label>
        <referenceTo>EXPRN__Experian_Business__c</referenceTo>
        <relationshipLabel>Experian Credit Reports</relationshipLabel>
        <relationshipName>Experian_Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Financial_Stability_Risk__c</fullName>
        <label>Financial Stability Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Fortune_1000_Ranking__c</fullName>
        <label>Fortune 1000 Ranking</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__High_Risk_Alerts__c</fullName>
        <label>High Risk Alerts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Highest_DBT_Previous_5_Quarters__c</fullName>
        <label>Highest DBT Previous 5 Quarters</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Highest_DBT_Previous_6_Months__c</fullName>
        <label>Highest DBT Previous 6 Months</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Highest_credit_amount_extended__c</fullName>
        <label>Highest credit amount extended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Industry_DBT__c</fullName>
        <label>Industry DBT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Intelliscore_Plus__c</fullName>
        <label>Intelliscore Plus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Judgment_filings__c</fullName>
        <label>Judgment filings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Monthly_Average_DBT__c</fullName>
        <label>Monthly Average DBT</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Most_frequent_industry_purchasing_terms__c</fullName>
        <label>Most frequent industry purchasing terms</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_0130__c</fullName>
        <label>New 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_3160__c</fullName>
        <label>New 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_6190__c</fullName>
        <label>New 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_Balance__c</fullName>
        <label>New Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_Current__c</fullName>
        <label>New Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_DBT__c</fullName>
        <label>New DBT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_Lines_Reported__c</fullName>
        <label>New Lines Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__New_Recent_High_Credit__c</fullName>
        <label>New Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__On_File_Since__c</fullName>
        <label>On File Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Original_Filings__c</fullName>
        <label>Original Filings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Payment_Trend_Indication__c</fullName>
        <label>Payment Trend Indication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Possible_OFAC_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Possible OFAC Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EXPRN__Predicted_DBT_Date__c</fullName>
        <label>Predicted DBT Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXPRN__Predicted_DBT_as_03_04_2015__c</fullName>
        <label>Predicted DBT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Public_Company__c</fullName>
        <label>Public Company</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Reference_Information__c</fullName>
        <label>Reference Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Report_Pulled_By__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Pulled By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Report_Type__c</fullName>
        <label>Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premier Profile</fullName>
                </value>
                <value>
                    <fullName>Business Profile</fullName>
                </value>
                <value>
                    <fullName>Business Summary</fullName>
                </value>
                <value>
                    <fullName>Business Profile with Score</fullName>
                </value>
                <value>
                    <fullName>Intelliscore</fullName>
                </value>
                <value>
                    <fullName>DecisionIQ</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Owner Profiles with Score</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXPRN__SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Sales__c</fullName>
        <label>Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scoring_Model_DSP__c</fullName>
        <formula>EXPRN__Scoring_Model__r.Name &amp; &quot; - &quot; &amp; EXPRN__Scoring_Model__r.EXPRN__Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scoring Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Scoring_Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scoring Model Lookup</label>
        <referenceTo>EXPRN__Scoring_Model__c</referenceTo>
        <relationshipLabel>Experian Credit Reports</relationshipLabel>
        <relationshipName>Experian_Credit_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXPRN__Stock_Exchange_Symbol__c</fullName>
        <label>Stock Exchange &amp; Symbol</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Sum_of_legal_filings__c</fullName>
        <label>Sum of legal filings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__Tax_Lien_filings__c</fullName>
        <label>Tax Lien filings</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_0130__c</fullName>
        <label>Total Trade 01-30</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_3160__c</fullName>
        <label>Total Trade 31-60</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_6190__c</fullName>
        <label>Total Trade 61-90</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_Balance__c</fullName>
        <label>Total Trade Balance</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_Current__c</fullName>
        <label>Total Trade Current</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_Lines_Reported__c</fullName>
        <label>Total Trade Lines Reported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_Trade_Recent_High_Credit__c</fullName>
        <label>Total Trade Recent High Credit</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__Total_trade_and_collection_660__c</fullName>
        <label>Total trade and collection (660)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EXPRN__TradeCollectionCount__c</fullName>
        <label>TradeCollectionCount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXPRN__UCC_filings__c</fullName>
        <label>UCC filings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXPRN__X6_month_average__c</fullName>
        <label>6 month average</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EXPRN__Years_On_File__c</fullName>
        <label>Years On File</label>
        <type>TextArea</type>
    </fields>
    <label>Experian Credit Report</label>
    <listViews>
        <fullName>EXPRN__All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EXPRN__Scoring_Model_DSP__c</columns>
        <columns>EXPRN__Exp_Business_Name__c</columns>
        <columns>EXPRN__Experian_Business__c</columns>
        <columns>EXPRN__Credit_Policy_DSP__c</columns>
        <columns>EXPRN__Credit_Policy__c</columns>
        <filterScope>Everything</filterScope>
        <label>All 2</label>
    </listViews>
    <listViews>
        <fullName>EXPRN__Test_View</fullName>
        <columns>NAME</columns>
        <columns>EXPRN__Experian_Business__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>EXPRN__Public_Company__c</columns>
        <filterScope>Mine</filterScope>
        <label>Test View</label>
    </listViews>
    <nameField>
        <label>Credit Report Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Credit Reports</pluralLabel>
    <recordTypes>
        <fullName>EXPRN__Business_Owner_Profile</fullName>
        <active>true</active>
        <description>Captures Business Owner related information</description>
        <label>Business Owner Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__Non_Premier_Profile</fullName>
        <active>true</active>
        <description>Captures Non Premier customer information</description>
        <label>Non Premier Profile</label>
    </recordTypes>
    <recordTypes>
        <fullName>EXPRN__Premier_Profile</fullName>
        <active>true</active>
        <description>Captures Premier customer information</description>
        <label>Premier Profile</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>